[gd_scene load_steps=2 format=3 uid="uid://d71bkm5ic0tt"]

[ext_resource type="Script" path="res://entities/components/ranged/RangedComponent.gd" id="1_km8ms"]

[node name="RangedComponent" type="Node2D"]
script = ExtResource("1_km8ms")

[node name="ShootPosition" type="Marker2D" parent="."]

[node name="ShootCooldown" type="Timer" parent="."]

[connection signal="timeout" from="ShootCooldown" to="." method="enable"]
